--- a/manifest.yml
+++ b/manifest.yml
@@ -3,6 +3,7 @@ applications:
   memory: 256M
   instances: 1
   domain: mybluemix.net
+  manifest: sdk-for-nodejs
   name: todo-sjg
   host: todo-sjg
   disk_quota: 1024M
